fix repeater data not showing on my account and export issue

--- a/assets/css/my-account-layout.scss
+++ b/assets/css/my-account-layout.scss
@@ -2523,3 +2523,18 @@ td {
 .hidden {
 	display: none !important;
 }
+
+.ur-repeater-row {
+	.ur-repeater-row-title {
+		font-size: 14px;
+	}
+
+	.ur-form-grid {
+		gap: 16px !important;
+	}
+
+	.ur-repeater-label {
+		padding: 0;
+	}
+
+}
